# TheGhostCrossword

./: CMakeLists.txt  fileUtils.c  fileUtils.h  gameLogicUtils.c  gameLogicUtils.h  initBoard.c  initBoard.h  main.c  parameters.h  threadsUtils.c  threadsUtils.h
PoolOfWords/: wordsSize4  wordsSize5  wordsSize6  wordsSize7  wordsSize8  wordsSize9
